Implement followButton to ProfileViewController

--- a/Liarodon/Profile/Profile.storyboard
+++ b/Liarodon/Profile/Profile.storyboard
@@ -116,20 +116,50 @@
                                                     <userDefinedRuntimeAttribute type="string" keyPath="title" value="Favourites"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1YA-xt-W5s" userLabel="Follow Button View">
+                                                <rect key="frame" x="310.66666666666674" y="0.0" width="103.33333333333331" height="64"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cL0-Af-Ihq" customClass="FollowButton" customModule="Liarodon" customModuleProvider="target">
+                                                        <rect key="frame" x="29.333333333333314" y="9.6666666666666856" width="44" height="44"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="44" id="hgm-jN-tdF"/>
+                                                            <constraint firstAttribute="width" secondItem="cL0-Af-Ihq" secondAttribute="height" multiplier="1:1" id="uJz-tp-9qD"/>
+                                                        </constraints>
+                                                        <inset key="imageEdgeInsets" minX="8" minY="8" maxX="8" maxY="8"/>
+                                                    </button>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Requested" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ncf-2Q-SLs">
+                                                        <rect key="frame" x="25.333333333333314" y="45.666666666666686" width="51.666666666666686" height="12"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="cL0-Af-Ihq" firstAttribute="centerY" secondItem="1YA-xt-W5s" secondAttribute="centerY" id="4Pc-Rh-W14"/>
+                                                    <constraint firstItem="ncf-2Q-SLs" firstAttribute="top" secondItem="cL0-Af-Ihq" secondAttribute="bottom" constant="-8" id="Dxv-p6-ijh"/>
+                                                    <constraint firstItem="cL0-Af-Ihq" firstAttribute="centerX" secondItem="1YA-xt-W5s" secondAttribute="centerX" id="PEC-jA-tLu"/>
+                                                    <constraint firstItem="ncf-2Q-SLs" firstAttribute="centerX" secondItem="cL0-Af-Ihq" secondAttribute="centerX" id="vvZ-6N-ksa"/>
+                                                </constraints>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="64" id="1ir-75-rd7"/>
                                             <constraint firstItem="cYl-sN-Pkh" firstAttribute="width" secondItem="0cM-eV-0td" secondAttribute="width" multiplier="1/4" id="1q4-N2-Ohu"/>
                                             <constraint firstItem="iHm-dB-M8a" firstAttribute="top" secondItem="0cM-eV-0td" secondAttribute="top" id="8Tf-gT-eB9"/>
+                                            <constraint firstItem="1YA-xt-W5s" firstAttribute="width" secondItem="0cM-eV-0td" secondAttribute="width" multiplier="1/4" id="AJL-05-PVc"/>
                                             <constraint firstAttribute="bottom" secondItem="cYl-sN-Pkh" secondAttribute="bottom" id="Ff2-r8-ohv"/>
                                             <constraint firstItem="iHm-dB-M8a" firstAttribute="width" secondItem="0cM-eV-0td" secondAttribute="width" multiplier="1/4" id="Gad-U4-OXQ"/>
                                             <constraint firstItem="cYl-sN-Pkh" firstAttribute="leading" secondItem="0cM-eV-0td" secondAttribute="leading" id="KxO-m9-5e7"/>
+                                            <constraint firstItem="1YA-xt-W5s" firstAttribute="top" secondItem="0cM-eV-0td" secondAttribute="top" id="N2f-eI-MFe"/>
+                                            <constraint firstAttribute="trailing" secondItem="1YA-xt-W5s" secondAttribute="trailing" id="Ni8-0Z-oYF"/>
                                             <constraint firstAttribute="bottom" secondItem="cL3-WI-2Zf" secondAttribute="bottom" id="Qe4-5P-fNq"/>
                                             <constraint firstItem="cYl-sN-Pkh" firstAttribute="top" secondItem="0cM-eV-0td" secondAttribute="top" id="S3M-qP-yz6"/>
                                             <constraint firstItem="cL3-WI-2Zf" firstAttribute="width" secondItem="0cM-eV-0td" secondAttribute="width" multiplier="1/4" id="Szm-iW-02l"/>
                                             <constraint firstAttribute="trailing" secondItem="cL3-WI-2Zf" secondAttribute="trailing" id="VFy-Fw-HA9"/>
                                             <constraint firstAttribute="bottom" secondItem="NRg-LI-M1d" secondAttribute="bottom" id="VZ1-y3-rBe"/>
+                                            <constraint firstAttribute="bottom" secondItem="1YA-xt-W5s" secondAttribute="bottom" id="XEz-QW-02c"/>
                                             <constraint firstItem="cL3-WI-2Zf" firstAttribute="top" secondItem="0cM-eV-0td" secondAttribute="top" id="c9z-fA-Q20"/>
                                             <constraint firstItem="NRg-LI-M1d" firstAttribute="top" secondItem="0cM-eV-0td" secondAttribute="top" id="gk6-Bi-GP9"/>
                                             <constraint firstItem="iHm-dB-M8a" firstAttribute="centerX" secondItem="0cM-eV-0td" secondAttribute="centerX" multiplier="5/4" id="hSQ-v7-lFD"/>
@@ -195,6 +225,8 @@
                         <outlet property="displayNameLabel" destination="iiT-Nj-ERV" id="R17-I1-ScD"/>
                         <outlet property="favouritesButton" destination="cL3-WI-2Zf" id="1a6-Qc-PLh"/>
                         <outlet property="favouritesContainerView" destination="la2-gV-mRY" id="KZw-Xg-43e"/>
+                        <outlet property="followButton" destination="cL0-Af-Ihq" id="aYa-Q3-1cJ"/>
+                        <outlet property="followButtonView" destination="1YA-xt-W5s" id="Azt-A2-Qox"/>
                         <outlet property="followersButton" destination="iHm-dB-M8a" id="FRF-2O-4QR"/>
                         <outlet property="followersContainerView" destination="vv3-kg-ztn" id="THV-MC-qnd"/>
                         <outlet property="followingButton" destination="NRg-LI-M1d" id="KGg-Kr-XjM"/>
@@ -204,6 +236,7 @@
                         <outlet property="headerViewMinTopConstraint" destination="nCm-bC-DTg" id="vSZ-gA-5M5"/>
                         <outlet property="headerViewTopConstraint" destination="4Ag-In-Qhc" id="Adl-pk-1Ob"/>
                         <outlet property="menuView" destination="0cM-eV-0td" id="Q32-ad-81b"/>
+                        <outlet property="requestedLabel" destination="ncf-2Q-SLs" id="fbY-hl-Ska"/>
                         <outlet property="statusesButton" destination="cYl-sN-Pkh" id="FBd-fa-NLM"/>
                         <outlet property="statusesContainerView" destination="R6h-ec-gUe" id="cLG-gY-dVH"/>
                         <segue destination="Hjw-pM-RD1" kind="show" identifier="Profile" id="KO1-iz-lHM"/>
